# leapc-python-bindings

./: .gitignore  DEPENDENCY_USAGE.md  README.md  pyproject.toml
examples/: tracking_event_example.py
leapc-cffi/: README.md  pyproject.toml  setup.py
leapc-cffi/src/leapc_cffi/: __init__.py
leapc-cffi/src/scripts/: cffi_build.py
leapc-python-api/: pyproject.toml  setup.py
leapc-python-api/src/leap/: __init__.py  connection.py  datatypes.py  device.py  event_listener.py  events.py  functions.py  recording.py
