[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leap"
version = "0.0.1"
description = "Python wrappers around LeapC bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ultraleap"}
]
dependencies = [
    "leapc_cffi",
]

[tool.uv.sources]
leapc_cffi = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
