[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leap"
version = "0.0.1"
description = "Python wrappers around LeapC bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ultraleap"}
]
dependencies = [
    "leapc_cffi",
]

[project.optional-dependencies]
examples = [
    "numpy",
    "opencv-python",
]

# Workspace source (used when developing in the workspace)
# When installing from git, users should override this in their pyproject.toml
[tool.uv.sources]
leapc_cffi = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
